+NoScript element and meta tag that prevents user scaling (on mobile only?)

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -288,7 +288,7 @@ body {
     }
 
     input {
-        height: 4vh;
+        height: 4.5vh;
     }
 }
 
